--- a/src/view/assets/sass/index.scss
+++ b/src/view/assets/sass/index.scss
@@ -1,3 +1,6 @@
-@import "../../../../node_modules/bootstrap/scss/bootstrap.scss"; // Imports Bootstrap
+@import "../../../../node_modules/bootstrap/scss/bootstrap.scss";
 
-@import "main";
+@import "./global.scss";
+
+@import "./navbar.scss";
+@import "./pages.scss";
