--- a/src/view/index.html
+++ b/src/view/index.html
@@ -7,55 +7,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autodrawer</title>
     <link rel="stylesheet" href="./assets/css/app.min.css">
-    <script src="./assets/js/bootstrap.min.js" defer></script> <!-- Loads bootstrap JS -->
     <script src="./assets/js/app.min.js" defer></script>
-
 </head>
 
 <!-- rPage represents the page to be accessed through Ajax -->
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="dark-mode">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-gray800">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Autodrawer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
+                <ul class="navbar-nav me-auto mb-lg-0">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            Settings
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Coordinates</a></li>
+                            <li><a class="dropdown-item" href="#">Values</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <ul class="navbar-nav mb-lg-0">
+                    <button class="btn btn-warning p-0">
+                        <a class="nav-link pull-right text-black" href="#">Draw!</a>
+                    </button>
+                </ul>
             </div>
         </div>
     </nav>
+
+    <main>
+        <p>Hello, World!</p>
+    </main>
 </body>
 
 </html>
