--- a/src/view/index.html
+++ b/src/view/index.html
@@ -11,11 +11,10 @@
 </head>
 
 <!-- rPage represents the page to be accessed through Ajax -->
-
-<body class="dark-mode">
+<body class="dark-mode d-flex flex-column">
     <nav class="navbar navbar-expand-lg navbar-dark bg-gray800">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Autodrawer</a>
+            <a class="navbar-brand" href="#" rPage="#./pages/welcome.html">Autodrawer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -29,23 +28,19 @@
                             Settings
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Coordinates</a></li>
-                            <li><a class="dropdown-item" href="#">Values</a></li>
+                            <li><a class="dropdown-item" href="#" rPage="#./pages/coordinates.html">Coordinates</a></li>
+                            <li><a class="dropdown-item" href="#" rPage="#./pages/values.html">Values</a></li>
                         </ul>
                     </li>
                 </ul>
                 <ul class="navbar-nav mb-lg-0">
-                    <button class="btn btn-warning p-0">
-                        <a class="nav-link pull-right text-black" href="#">Draw!</a>
-                    </button>
+                    <button class="btn btn-warning py-2" rPage="#./pages/draw.html">Draw!</button>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <main>
-        <p>Hello, World!</p>
-    </main>
+    <main class="d-flex"></main>
 </body>
 
 </html>
