--- a/src/view/assets/sass/index.scss
+++ b/src/view/assets/sass/index.scss
@@ -2,6 +2,7 @@
 @import "../../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 @import "./global.scss";
+@import "./notimportant/margin.scss";
 
 @import "./navbar.scss";
 @import "./pages.scss";
