Fixed Ajax on button

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -34,7 +34,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav mb-lg-0">
-                    <button class="btn btn-warning py-2" rPage="#./pages/draw.html">Draw!</button>
+                    <button class="btn btn-warning py-2" rPage="#./pages/draw.html" onclick="window.location.hash = this.getAttribute('rPage')">Draw!</button>
                 </ul>
             </div>
         </div>
