--- a/src/view/index.html
+++ b/src/view/index.html
@@ -32,6 +32,9 @@
                             <li><a class="dropdown-item" href="#" rPage="#./pages/values.html">Values</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link" rPage="#./pages/help.html">Help</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav mb-lg-0">
                     <button class="btn btn-warning py-2" rPage="#./pages/draw.html" onclick="window.location.hash = this.getAttribute('rPage')">Draw!</button>
