Added the "drawer itself" from Node Autodrawer

--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -2,7 +2,7 @@
     <header>
         <h1>Coordinates</h1>
         <h5 class="fst-italic">The Autodrawer will use these coordinates to interact with Paint 3D UI.
-            Every coordinate is based on your cursor XY position within your screen space.
+            Every coordinate is based on your cursor XY coordinate within your screen space.
         </h5>
     </header>
     <div class="container mt-6">
