--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -8,25 +8,25 @@
     <div class="container mt-6">
         <div class="row">
             <div class="col col-xxl-10">
+                <!-- Coordinates -->
                 <div class="container">
-                    <!-- Coordinates -->
-                    <div class="row">
-                        <div class="col" id="toolMarker">
+                    <div class="row mb-1" id="toolMarker">
+                        <div class="col">
                             <span class="mt-2 ml-2">Tool | Marker:</span>
                         </div>
                         <div class="col">
                             <div class="input-group">
-                                <input type="text" class="form-control mx-2 border-025rem" placeholder="x"
+                                <input type="text" class="form-control mx-2 border-025rem" id="teste" placeholder="x"
                                     aria-label="X">
                                 <input type="text" class="form-control mx-2 border-025rem" placeholder="y"
                                     aria-label="Y">
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="toolWatercolor">
+                    <div class="row mb-1" id="toolWatercolor">
                         <div class="col">
                             <span class="mt-2 ml-2">Tool | Watercolor:</span>
                         </div>
@@ -39,10 +39,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="toolPixelPencil">
+                    <div class="row mb-1" id="toolPixelPencil">
                         <div class="col">
                             <span class="mt-2 ml-2">Tool | Pixel Pencil:</span>
                         </div>
@@ -55,10 +55,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="toolGraphitePencil">
+                    <div class="row mb-1" id="toolGraphitePencil">
                         <div class="col">
                             <span class="mt-2 ml-2">Tool | Graphite Pencil:</span>
                         </div>
@@ -71,10 +71,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="toolCrayon">
+                    <div class="row mb-1" id="toolCrayon">
                         <div class="col">
                             <span class="mt-2 ml-2">Tool | Crayon:</span>
                         </div>
@@ -87,10 +87,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="boxBrushSize">
+                    <div class="row mb-1" id="boxBrushSize">
                         <div class="col">
                             <span class="mt-2 ml-2">Values | Brush Size:</span>
                         </div>
@@ -103,10 +103,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="boxBrushOpacity">
+                    <div class="row mb-1" id="boxBrushOpacity">
                         <div class="col">
                             <span class="mt-2 ml-2">Values | Brush Opacity:</span>
                         </div>
@@ -119,10 +119,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="boxZoom">
+                    <div class="row mb-1" id="boxZoom">
                         <div class="col">
                             <span class="mt-2 ml-2">Values | Zoom:</span>
                         </div>
@@ -135,10 +135,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="buttonSelectedColorPreview">
+                    <div class="row mb-1" id="buttonSelectedColorPreview">
                         <div class="col">
                             <span class="mt-2 ml-2">Button | Selected Color Preview:</span>
                         </div>
@@ -151,10 +151,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="selectColorRed">
+                    <div class="row mb-1" id="selectColorRed">
                         <div class="col">
                             <span class="mt-2 ml-2">Color Selector | Red:</span>
                         </div>
@@ -167,10 +167,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="selectColorGreen">
+                    <div class="row mb-1" id="selectColorGreen">
                         <div class="col">
                             <span class="mt-2 ml-2">Color Selector | Green:</span>
                         </div>
@@ -183,10 +183,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="selectColorBlue">
+                    <div class="row mb-1" id="selectColorBlue">
                         <div class="col">
                             <span class="mt-2 ml-2">Color Selector | Blue:</span>
                         </div>
@@ -199,10 +199,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="selectColorOkButton">
+                    <div class="row mb-1" id="selectColorOkButton">
                         <div class="col">
                             <span class="mt-2 ml-2">Color Selector | Ok Button:</span>
                         </div>
@@ -215,10 +215,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="canvasTopLeftCorner">
+                    <div class="row mb-1" id="canvasTopLeftCorner">
                         <div class="col">
                             <span class="mt-2 ml-2">Canvas | Top Left Corner:</span>
                         </div>
@@ -231,10 +231,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="canvasBottomRightCorner">
+                    <div class="row mb-1" id="canvasBottomRightCorner">
                         <div class="col">
                             <span class="mt-2 ml-2">Canvas | Bottom Right Corner:</span>
                         </div>
@@ -247,10 +247,10 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row" id="contextRedefineCanvas">
+                    <div class="row mb-1" id="contextRedefineCanvas">
                         <div class="col">
                             <span class="mt-2 ml-2">Context Menu | Redefine Canvas:</span>
                         </div>
@@ -263,9 +263,12 @@
                             </div>
                         </div>
                         <div class="col col-sm-1">
-                            <span svg-working>svg goes here</span>
+                            <span svg-working></span>
                         </div>
                     </div>
+                </div>
+                <div class="d-flex">
+                    <button class="btn btn-info mr-2 mb-4"">Load default values</button>
                 </div>
             </div>
             <aside class="col col-sm-2">
