Added Svgs for the coordinate page and a coordinate validator

--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -10,13 +10,13 @@
             <div class="col col-xxl-10">
                 <!-- Coordinates -->
                 <div class="container">
-                    <div class="row mb-1" id="toolMarker">
+                    <div class="row mb-1" coordinateDiv id="toolMarker">
                         <div class="col">
                             <span class="mt-2 ml-2">Tool | Marker:</span>
                         </div>
                         <div class="col">
                             <div class="input-group">
-                                <input type="text" class="form-control mx-2 border-025rem" id="teste" placeholder="x"
+                                <input type="text" class="form-control mx-2 border-025rem" placeholder="x"
                                     aria-label="X">
                                 <input type="text" class="form-control mx-2 border-025rem" placeholder="y"
                                     aria-label="Y">
@@ -26,7 +26,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="toolWatercolor">
+                    <div class="row mb-1" coordinateDiv id="toolWatercolor">
                         <div class="col">
                             <span class="mt-2 ml-2">Tool | Watercolor:</span>
                         </div>
@@ -42,7 +42,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="toolPixelPencil">
+                    <div class="row mb-1" coordinateDiv id="toolPixelPencil">
                         <div class="col">
                             <span class="mt-2 ml-2">Tool | Pixel Pencil:</span>
                         </div>
@@ -58,7 +58,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="toolGraphitePencil">
+                    <div class="row mb-1" coordinateDiv id="toolGraphitePencil">
                         <div class="col">
                             <span class="mt-2 ml-2">Tool | Graphite Pencil:</span>
                         </div>
@@ -74,7 +74,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="toolCrayon">
+                    <div class="row mb-1" coordinateDiv id="toolCrayon">
                         <div class="col">
                             <span class="mt-2 ml-2">Tool | Crayon:</span>
                         </div>
@@ -90,7 +90,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="boxBrushSize">
+                    <div class="row mb-1" coordinateDiv id="boxBrushSize">
                         <div class="col">
                             <span class="mt-2 ml-2">Values | Brush Size:</span>
                         </div>
@@ -106,7 +106,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="boxBrushOpacity">
+                    <div class="row mb-1" coordinateDiv id="boxBrushOpacity">
                         <div class="col">
                             <span class="mt-2 ml-2">Values | Brush Opacity:</span>
                         </div>
@@ -122,7 +122,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="boxZoom">
+                    <div class="row mb-1" coordinateDiv id="boxZoom">
                         <div class="col">
                             <span class="mt-2 ml-2">Values | Zoom:</span>
                         </div>
@@ -138,7 +138,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="buttonSelectedColorPreview">
+                    <div class="row mb-1" coordinateDiv id="buttonSelectedColorPreview">
                         <div class="col">
                             <span class="mt-2 ml-2">Button | Selected Color Preview:</span>
                         </div>
@@ -154,7 +154,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="selectColorRed">
+                    <div class="row mb-1" coordinateDiv id="selectColorRed">
                         <div class="col">
                             <span class="mt-2 ml-2">Color Selector | Red:</span>
                         </div>
@@ -170,7 +170,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="selectColorGreen">
+                    <div class="row mb-1" coordinateDiv id="selectColorGreen">
                         <div class="col">
                             <span class="mt-2 ml-2">Color Selector | Green:</span>
                         </div>
@@ -186,7 +186,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="selectColorBlue">
+                    <div class="row mb-1" coordinateDiv id="selectColorBlue">
                         <div class="col">
                             <span class="mt-2 ml-2">Color Selector | Blue:</span>
                         </div>
@@ -202,7 +202,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="selectColorOkButton">
+                    <div class="row mb-1" coordinateDiv id="selectColorOkButton">
                         <div class="col">
                             <span class="mt-2 ml-2">Color Selector | Ok Button:</span>
                         </div>
@@ -218,7 +218,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="canvasTopLeftCorner">
+                    <div class="row mb-1" coordinateDiv id="canvasTopLeftCorner">
                         <div class="col">
                             <span class="mt-2 ml-2">Canvas | Top Left Corner:</span>
                         </div>
@@ -234,7 +234,7 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="canvasBottomRightCorner">
+                    <div class="row mb-1" coordinateDiv id="canvasBottomRightCorner">
                         <div class="col">
                             <span class="mt-2 ml-2">Canvas | Bottom Right Corner:</span>
                         </div>
@@ -250,15 +250,15 @@
                             <span svg-working></span>
                         </div>
                     </div>
-                    <div class="row mb-1" id="contextRedefineCanvas">
+                    <div class="row mb-1" coordinateDiv id="contextRedefineCanvas">
                         <div class="col">
                             <span class="mt-2 ml-2">Context Menu | Redefine Canvas:</span>
                         </div>
                         <div class="col">
                             <div class="input-group">
-                                <input type="text" class="form-control mx-2 border-025rem" placeholder="Relative x"
+                                <input type="text" class="form-control mx-2 border-025rem" placeholder="x Relative"
                                     aria-label="X">
-                                <input type="text" class="form-control mx-2 border-025rem" placeholder="Relative y"
+                                <input type="text" class="form-control mx-2 border-025rem" placeholder="y Relative"
                                     aria-label="Y">
                             </div>
                         </div>
@@ -274,8 +274,8 @@
             <aside class="col col-sm-2">
                 <!-- Cursor current position -->
                 <h3>Current cursor position</h3>
-                <p>x: <span id="xCursorPos"></span></p>
-                <p>y: <span id="yCursorPos"></span></p>
+                <p>x: <span coordinateDiv id="xCursorPos"></span></p>
+                <p>y: <span coordinateDiv id="yCursorPos"></span></p>
             </aside>
         </div>
     </div>
