--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -5,6 +5,27 @@
             Every coordinate is based on your cursor XY coordinate within your screen space.
         </h5>
     </header>
+
+    <!-- Modal -->
+    <div class="modal fade" id="loadValuesModal" tabindex="-1" aria-labelledby="loadValuesModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-gray700">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="loadValuesModalLabel">Load default values?</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Default values are based on a 1920x1080 resolution. It might not be compatible if your resolution is different.
+                    If you load default values, <span class="fw-bold">every data will be overwritten.</span>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="loadDefaultPositionValues()">Load default values (OVERWRITE DATA)</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container mt-6">
         <div class="row">
             <div class="col col-xxl-10">
@@ -268,10 +289,10 @@
                     </div>
                 </div>
                 <div class="d-flex">
-                    <button class="btn btn-info mr-2 mb-4"">Load default values</button>
+                    <button class="btn btn-info mr-2 mb-4" type="button" data-bs-toggle="modal" data-bs-target="#loadValuesModal">Load default values</button>
                 </div>
             </div>
-            <aside class="col col-sm-2">
+            <aside class=" col col-sm-2">
                 <!-- Cursor current position -->
                 <h3>Current cursor position</h3>
                 <p>x: <span coordinateDiv id="xCursorPos"></span></p>
