Non numeric values are now being correctly displayed as "non working"

--- a/src/view/assets/sass/global.scss
+++ b/src/view/assets/sass/global.scss
@@ -22,6 +22,10 @@ html {
     animation-name: fadein-text-mb0-5;
 }
 
+.duration-1s {
+    animation-duration: 1s;
+}
+
 .duration-2s {
     animation-duration: 2s;
 }
