--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column flex-grow-1">
+<div class="d-flex flex-column flex-grow-1 fadein-text duration-1s">
     <header>
         <h1>Coordinates</h1>
         <h5 class="fst-italic">The Autodrawer will use these coordinates to interact with Paint 3D UI.
