--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -288,8 +288,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="d-flex">
-                    <button class="btn btn-info mr-2 mb-4" type="button" data-bs-toggle="modal" data-bs-target="#loadValuesModal">Load default values</button>
+                <div id="fileAlertPlaceholder"></div>
+                <div class="d-flex gap-5px">
+                    <button class="btn btn-secondary mr-2 mb-4" type="button" data-bs-toggle="modal" data-bs-target="#loadValuesModal">Load default values</button>
+                    <button class="btn btn-primary mr-2 mb-4" load-coordvalues type="button" onclick="loadPositionValues()">Load values</button>
+                    <button class="btn btn-success mr-2 mb-4" type="button">Save values</button>
                 </div>
             </div>
             <aside class=" col col-sm-2">
