--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -292,7 +292,7 @@
                 <div class="d-flex gap-5px">
                     <button class="btn btn-secondary mr-2 mb-4" type="button" data-bs-toggle="modal" data-bs-target="#loadValuesModal">Load default values</button>
                     <button class="btn btn-primary mr-2 mb-4" load-coordvalues type="button" onclick="loadPositionValues()">Load values</button>
-                    <button class="btn btn-success mr-2 mb-4" type="button">Save values</button>
+                    <button class="btn btn-success mr-2 mb-4" type="button" onclick="savePositionValues()">Save values</button>
                 </div>
             </div>
             <aside class=" col col-sm-2">
