Added content to the values page

--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -1,7 +1,8 @@
 <div class="d-flex flex-column flex-grow-1 fadein-text duration-1s">
     <header>
         <h1>Coordinates</h1>
-        <h5 class="fst-italic">The Autodrawer will use these coordinates to interact with Paint 3D UI.
+        <h5 class="fst-italic">
+            The Autodrawer will use these coordinates to interact with Paint 3D UI.
             Every coordinate is based on your cursor XY coordinate within your screen space.
         </h5>
     </header>
