Cursor is now "pointer" when hovering a dropdown item

--- a/src/view/assets/sass/global.scss
+++ b/src/view/assets/sass/global.scss
@@ -2,6 +2,17 @@ html {
     height: 100vh;
 }
 
+// Light and Dark Mode
+.light-mode {
+    background-color: $light;
+    color: $dark;
+}
+
+.dark-mode {
+    background-color: $dark;
+    color: $light;
+}
+
 // Animation classes
 .fadein-text {
     animation-name: fadein-text;
