Started "values" logic

--- a/src/view/pages/coordinates.html
+++ b/src/view/pages/coordinates.html
@@ -16,7 +16,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    Default values are based on a 1920x1080 resolution. It might not be compatible if your resolution is different.
+                    Default values are based on a 1920x1080 resolution and a 4000x3000 canvas. It might not be compatible if your resolution is different.
                     If you load default values, <span class="fw-bold">every data will be overwritten.</span>
                 </div>
                 <div class="modal-footer">
