"welcome" page is now working

--- a/src/view/pages/welcome.html
+++ b/src/view/pages/welcome.html
@@ -1,8 +1,8 @@
-<div class="d-flex flex-column flex-grow-1 justify-content-center align-items-center">
+<div class="d-flex flex-column flex-grow-1 justify-content-center align-items-center fadein-text duration-1s">
     <header>
-        <h1 class="fw-bold fs-huge mb-5-ni fadein-text-mb0-5 duration-4s">Welcome to 2flps' Autodrawer</h1>
+        <h1 class="fw-bold fs-huge mb-5-ni">Welcome to 2flps' Autodrawer</h1>
     </header>
-    <section class="d-flex flex-column align-items-center fadein-text duration-2s delay-2s">
+    <section class="d-flex flex-column align-items-center">
         <div id="drawer-coordinates-status"></div>
         <div id="drawer-values-status"></div>
     </section>
